testsuite/tests/typecheck/should_fail/tcfail078.stderr

tcfail078.hs:5:6: error:
    • Expected kind ‘* -> Constraint’, but ‘Integer’ has kind ‘*’
    • In the type signature: f :: Integer i => i

tcfail078.hs:6:19: error:
    • Could not deduce (Num i) arising from the literal ‘0’
      from the context: Integer i
        bound by the type signature for:
                   f :: forall i. Integer i => i
        at tcfail078.hs:5:1-19
      Possible fix:
        add (Num i) to the context of
          the type signature for:
            f :: forall i. Integer i => i
    • In the expression: 0
      In an equation for ‘f’: f = 0
